--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Free Dental Medical Hospital Website Template | Smarteyeapps.com</title>
+    <title> Dinesh Madhukar Kapase</title>
 
     <link rel="shortcut icon" href="assets/images/fav.jpg">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -19,9 +19,9 @@
                    <div id="menu-jk" class="col-md-4">
                        <div class="pro-s-cover">
                            <img src="assets/images/profile.jpg" alt="">
-                           <h6>Andrew Smith</h6>
-                           <span>Freelancer</span>
-                           <p>Web Designer</p>
+                           <h6>Dinesh Kapase</h6>
+                           <span>Python Developer</span>
+                           <p>Software Developer</p>
                            <div class="num-box w-100 d-flex">
                                <div class="hire">
                                    <b>55+</b> <br>
