--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                         <div class="data-box">
                            <h2>Experiance</h2>
                            <div class="row exp-row">
-                               <h6>Business Development</h6>
-                               <span>Microsoft</span>
-                               <i>Apiral 2011 - Present</i> 
+                               <h6>Software Developer</h6>
+                               <span>Gnapi Technologies PVT LTD</span>
+                               <i>Sep 2023 - Present</i> 
                                
                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a urna posuere, aliquet elit in, fermentum ligula. Sed est augue, molestie sed tortor sed, posuere commodo lectus.</p>
                            </div>
