--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a urna posuere, aliquet elit in, fermentum ligula. Sed est augue, molestie sed tortor sed, posuere commodo lectus.</p>
                            </div>
                            <div class="row exp-row">
-                               <h6>Business Development</h6>
-                               <span>Microsoft</span>
-                               <i>Apiral 2011 - Present</i> 
+                               <h6>Software Developer</h6>
+                               <span>E-Mech Solutions PVT LTD </span>
+                               <i>Apiral 2011 - Aug-2023</i> 
                                
                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a urna posuere, aliquet elit in, fermentum ligula. Sed est augue, molestie sed tortor sed, posuere commodo lectus.</p>
                            </div>
