--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                        </div>
                        
                        <div class="data-box service-box">
-                           <h2>Services</h2>
+                           <h2>Skills</h2>
                            <div class="service no-margin row">
                               <div class="col-sm-2 no-padding serv-logo">
                                    <i class="fab fa-delicious"></i>
