--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                            <h2>Skills</h2>
                            <div class="service no-margin row">
                               <div class="col-sm-2 no-padding serv-logo">
-                                   <i class="fab fa-delicious"></i>
+                                <img src="https://www.python.org/static/img/python-logo.png" alt="Python Logo">
                               </div>
                               <div class="col-sm-10 rgbf serv-det">
-                                  <h5>Graphic Design</h5>
+                                  <h5>Python</h5>
                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                               </div>
                           </div>
