--- a/index.html
+++ b/index.html
@@ -128,13 +128,20 @@
                               </div>
                               <div class="col-sm-10 rgbf serv-det">
                                   <h5>Python</h5>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                               </div>
                           </div>
                           <div class="service no-margin row">
                               <div class="col-sm-2 no-padding serv-logo">
-                                    <i class="fas fa-code"></i>
+                                <img src="https://www.python.org/static/img/python-logo.png" alt="Python Logo">
+                            </div>
+                              <div class="col-sm-10 rgbf serv-det">
+                                  <h5>Django</h5>
                               </div>
+                          </div>
+                          <div class="service no-margin row">
+                              <div class="col-sm-2 no-padding serv-logo">
+                                <img src="https://www.python.org/static/img/python-logo.png" alt="Python Logo">
+                            </div>
                               <div class="col-sm-10 rgbf serv-det">
                                   <h5>Graphic Design</h5>
                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -142,17 +149,8 @@
                           </div>
                           <div class="service no-margin row">
                               <div class="col-sm-2 no-padding serv-logo">
-                                   <i class="fab fa-chrome"></i>
-                              </div>
-                              <div class="col-sm-10 rgbf serv-det">
-                                  <h5>Graphic Design</h5>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                              </div>
-                          </div>
-                          <div class="service no-margin row">
-                              <div class="col-sm-2 no-padding serv-logo">
-                                    <i class="fab fa-android"></i>
-                              </div>
+                                <img src="https://www.python.org/static/img/python-logo.png" alt="Python Logo">
+                            </div>
                               <div class="col-sm-10 rgbf serv-det">
                                   <h5>Graphic Design</h5>
                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
