--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Your Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <div class="container">
             <h1>Your Name</h1>
@@ -16,21 +16,112 @@
         </div>
     </header>
 
+    <!-- Social Links Section -->
     <section class="social">
         <h2>Connect with me</h2>
         <div class="social-links">
             <a href="https://wa.me/YOUR_NUMBER" target="_blank">
-                <img src="whatsapp.png" alt="WhatsApp">
+                <img src="images/whatsapp.png" alt="WhatsApp">
             </a>
             <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">
-                <img src="linkedin.png" alt="LinkedIn">
+                <img src="images/linkedin.png" alt="LinkedIn">
             </a>
             <a href="https://www.instagram.com/YOUR_INSTAGRAM" target="_blank">
-                <img src="instagram.png" alt="Instagram">
+                <img src="images/instagram.png" alt="Instagram">
             </a>
         </div>
     </section>
 
+    <!-- Skills Section -->
+    <section id="skills" class="skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <div class="skills-list">
+                <div class="skill">
+                    <h3>Frontend Development</h3>
+                    <p>HTML, CSS, JavaScript, React, Vue.js</p>
+                </div>
+                <div class="skill">
+                    <h3>Backend Development</h3>
+                    <p>Node.js, Express, Python, Django, PHP</p>
+                </div>
+                <div class="skill">
+                    <h3>Database Management</h3>
+                    <p>MySQL, PostgreSQL, MongoDB</p>
+                </div>
+                <div class="skill">
+                    <h3>Tools & Platforms</h3>
+                    <p>Git, Docker, AWS, Azure</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education" class="education">
+        <div class="container">
+            <h2>Education</h2>
+            <div class="education-item">
+                <h3>Master of Science in Computer Science</h3>
+                <p>University Name, Year - Year</p>
+                <p>Description or achievements (optional).</p>
+            </div>
+            <div class="education-item">
+                <h3>Bachelor of Science in Information Technology</h3>
+                <p>University Name, Year - Year</p>
+                <p>Description or achievements (optional).</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="container">
+            <h2>Experience</h2>
+            <div class="experience-item">
+                <h3>Job Title at Company Name</h3>
+                <p>Year - Present</p>
+                <ul>
+                    <li>Responsibility or achievement 1.</li>
+                    <li>Responsibility or achievement 2.</li>
+                    <li>Responsibility or achievement 3.</li>
+                </ul>
+            </div>
+            <div class="experience-item">
+                <h3>Job Title at Company Name</h3>
+                <p>Year - Year</p>
+                <ul>
+                    <li>Responsibility or achievement 1.</li>
+                    <li>Responsibility or achievement 2.</li>
+                    <li>Responsibility or achievement 3.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="projects-list">
+                <div class="project-item">
+                    <img src="images/project1.png" alt="Project 1">
+                    <h3>Project Title 1</h3>
+                    <p>Brief description of the project.</p>
+                    <a href="https://github.com/YOUR_GITHUB/project1" target="_blank" class="btn">View on GitHub</a>
+                </div>
+                <div class="project-item">
+                    <img src="images/project2.png" alt="Project 2">
+                    <h3>Project Title 2</h3>
+                    <p>Brief description of the project.</p>
+                    <a href="https://github.com/YOUR_GITHUB/project2" target="_blank" class="btn">View on GitHub</a>
+                </div>
+                <!-- Add more projects as needed -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
